tests/NormalTests/paczka1/fuzzy1/43635044.err
Error in line 4: MGjljX A537 45,8
Error in line 31: u9QQm8RwH3 A947 32,38
Error in line 32: hYJKJ S943 5,97
Error in line 39: LYC9ARdL A537 17,7
